--- a/package.json
+++ b/package.json
@@ -10,12 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.4.0",
+    "@stripe/stripe-js": "^6.0.0",
     "@tailwindcss/vite": "^4.0.1",
+    "axios": "^1.8.3",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase": "^11.3.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
