--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -1,52 +1,20 @@
 {
-  "name": "orderingsys",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "smart-ephone-backend",
+  "version": "1.0.0",
+  "main": "server.cjs",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "node server.cjs"
   },
   "dependencies": {
-    "@stripe/react-stripe-js": "^3.4.0",
-    "@stripe/stripe-js": "^6.0.0",
-    "@tailwindcss/vite": "^4.0.1",
-    "axios": "^1.8.3",
-    "bcrypt": "^5.1.1",
+    "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "firebase": "^11.3.1",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.474.0",
-    "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.2.0",
-    "react-slick": "^0.30.3",
-    "react-toastify": "^11.0.5",
-    "slick-carousel": "^1.8.1",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
     "stripe": "^17.7.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.1",
-    "vite": "^6.0.5"
   }
 }
