--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}  # ✅ Inject here
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
