--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.8.1",
