--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/react-stripe-js": "^3.4.0",
     "@stripe/stripe-js": "^6.0.0",
     "@tailwindcss/vite": "^4.0.1",
+    "aos": "^2.3.4",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
