--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.474.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
+    "nodemailer": "^7.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
